objects/TriggerFormData__c.object
<CustomObject>
    <fields>
        <fullName>ReadOnly__c</fullName>
        <label>ReadOnlyField</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEmail_Id__c</fullName>
        <label>TEmail Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TPhone_Number__c</fullName>
        <label>TPhone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TQualification__c</fullName>
        <label>TQualification</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TfPickList__c</fullName>
        <label>TfPickList</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hi</fullName>
                </value>
                <value>
                    <fullName>Bye</fullName>
                </value>
                <value>
                    <fullName>Hi..Hi..</fullName>
                </value>
                <value>
                    <fullName>Bye..Bye..</fullName>
                </value>
                <value>
                    <fullName>Ok</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TriggerFormData</label>
    <nameField>
        <label>TriggerFormData Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TriggerFormData</pluralLabel>
    <recordTypes>
        <fullName>TfRC</fullName>
        <active>false</active>
        <label>TfRC</label>
    </recordTypes>
    <recordTypes>
        <fullName>TfRC1</fullName>
        <active>true</active>
        <label>TfRC1</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>